Bug 80818 - [byt dsi] intel_dsi_clear_device_ready -- *ERROR* DSI LP not going Low
Summary: [byt dsi] intel_dsi_clear_device_ready -- *ERROR* DSI LP not going Low
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Rodrigo Vivi
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-02 16:13 UTC by Chris Wilson
Modified: 2017-07-24 22:53 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (71.84 KB, text/plain)
2014-07-02 16:13 UTC, Chris Wilson
no flags Details

Description Chris Wilson 2014-07-02 16:13:11 UTC
Created attachment 102147 [details]
dmesg

[    2.872697] [drm:dpi_send_cmd] *ERROR* Timeout waiting for DPI FIFO empty.
[    2.981073] [drm:intel_dsi_clear_device_ready] *ERROR* DSI LP not going Low

Plus some unusual modeset check state failures.
Comment 1 Shobhit 2014-07-03 11:40:59 UTC
Can you test these patches - 
http://lists.freedesktop.org/archives/intel-gfx/2014-July/048401.html
http://lists.freedesktop.org/archives/intel-gfx/2014-July/048402.html

modeset check failures are there because for DSI we have not implemented 
intel_encoder->get_config

I have a quirky patch to fix modeset issues as well. But need to refine first.
Comment 3 Jani Nikula 2014-07-04 14:27:35 UTC
Patches pushed to -fixes.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.